# zkDL

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  bls12-381.cu  bls12-381.cuh  build.sh  commitment.cu  commitment.cuh  commitment_test.cu  demo-check.cu  demo.cu  demo.sh  fr-tensor.cu  fr-tensor.cuh  g1-tensor.cuh  gpu_arch.sh  inf_test.cu  main.cu  model.py  nohup.out  proof.cu  proof.cuh  proof_test.cu  test.cu  timer.hpp  zk-attention.cu  zk-attention.cuh  zkfc.cu  zkfc.cuh  zkrelu.cu  zkrelu.cuh
ec/: CMakeLists.txt
src/: CMakeLists.txt  fr-tensor.cu  fr-tensor.cuh  main.cu  timer.hpp
